# tpp

./: README.md  makefile
chip8/wasm/: Cargo.toml
server/: .env  .gitignore  .sqlfluff  Cargo.toml  docker-compose.yaml  dockerfile  jwt_ga.sh  makefile  readme.md  tpp.service
server/.sqlx/: query-0292c87d2050ca38f6036fc12f37937c5e92ae855dcc644578d90896d01f5a98.json  query-0bb230a92e7e745ae1b6ff0d296e2568df5f0ec7e6b85d1d47be7ec59d2a2772.json  query-1026353ef926786508d15d715342a14d4c935178fc25c9b9c2c1d8e204107e3a.json  query-13c4362c142976158458c5f6a44921aa0595d8845b6329685e841cde31c29791.json  query-198ccd5cfb07e6e9cd6d0e3a3c53261e8e109b8c03b5f7522fed7427aa823a00.json  query-1ac91b83b08d7aa1b146c2e370cfa5068dda94ffb677234f897ef819e8d9cf83.json  query-1b6dc716194441ef916803e47bda515f63a0d619194b4bf8369b9ef7aa830f7f.json  query-1f704582261503bce07f9c10557a497dbf3fd0e5a79d5cf595168fb3efa3a94c.json  query-1fe3df42c6134b53a998ec3d795fc92e2e3343c758b05dc0dab718674e9644a8.json  query-27017342d18bbe00a3263efb40af8dd03de2cb9a95d49e5db769db2bf6f688a7.json  query-2c9b7cd6e1f1946af6f4340698670f3a446188c94263294a0356dd61b569b1c9.json  query-2fbab6b7fb6a2f90009466d9bc220db6d0dfff0f03fbbab9c160851dc654b3e1.json  query-31b70d2ccbf36fe363c9cac2e68eb2718ff659f45238ff44199bedb0b14ba8ae.json  query-3697505ebee6ea18bdd3ae2dbc002c55a582b91045b2841e00a3b2adb21d2847.json  query-3885819c493b226d34c4d2fa6df911e78095dd75a673b9fcb9f34668e82388c7.json  query-3f17f3226b85b30ef7d7eb7d2918c4c8728645a2c0a1fd64d2706c77bf0d348c.json  query-43bb1f89780369e0102b930dceda51e2d756d97da562c49a77f274ea0bd051b7.json  query-45853fd6590da9de86a29763d597ab14ae21e1372f7534f122069677bb750c54.json  query-45f31c11a280d64da68ea8206ca385622cc0bf84dd67012619fa5fadc9487d9d.json  query-49d0b5668583ba2038976ea976e8f141efd03e46314a0519b8ebd087d04ec4a1.json  query-49f7b1dcd49cf260aaf52f15340f9f098d8431ed36ae838013c0bf46d08f0ca5.json  query-4dce8bfcbad5e2985ee4f152ded72152545ef097a2b62986c6b05902fa8d3602.json  query-51ad71c5970c4e28d598ede7ec3b5d913ae3af1287a9cc6626dcda102683ae5e.json  query-5f1e3074dfadfa3dc56e501165c21c72d51bf379884a7d5382a38fda153925de.json  query-6162d5ae649b787411358e03b3a3a3e3873293d761d15cb08a9cb9c19526c100.json  query-69706f582b9af33b8c99b749c9f6228bc4cd510af8829c2dae3a5a88d10d49be.json  query-6abf41ee39a650cf494837b8288a55feb33b227d3269064a6f4cfe4659e5cc68.json  query-7157480950a64a10d1359d12a7fde6d2e3d6e23220403c916effdd4f190e8447.json  query-8186c7e4fab161cb2debefbee32c1eb5e5e70963f2d2a272caa8f4421313b76f.json  query-81fa69c3ad5591620c7de7a8d610fb8c17627a59dc382a93f9764b9ad93086ed.json  query-8271df9378db9f1db9c7dadd67acf72e434b695cfa2f35b5011a17a8f4711d3c.json  query-840a96639cb00e88ebf292c5e608125561c68b674a0b6ff8b4cfa9af85d60cce.json  query-84f457055672debea271d7500c52de64ab4775feaedbed278df256f490da0b93.json  query-85b937a85a4d0f57ee5b100a8a378f14ff53d9d7974cee44fd15cf22aa8d8dd8.json  query-904eed9f1e1c740aaf83cd4ec055db337ba0fbfb056f4b35b6fad7ba0407b0c0.json  query-90dd9280a740b09ca296fdb6bb00ed01d0e5a78d71f04965b4e13a23f0fa446e.json  query-9c0d18a198dbf165db5f58170c98812d9ec6767744f59f56de940343a958e204.json  query-a686dbc3dc3e37c24038839368359fd5c02177ca0eb2423943e2826ce1b4fffb.json  query-a8ebd3ec07c7d6c1c16a2e1f9e45dfc1caaae123c6e9f5aa5425de2775ea3c04.json  query-a950b7ebd1efbe3f129f0705979f788733d2abe63fcf6d34ed80a934c435ef72.json  (+17 more)
server/migrations/: 20230914122514_init.down.sql  20230914122514_init.up.sql  20230914126000_create_book.up.sql  20240119073342_create_user.up.sql  20240122105518_create_game.down.sql  20240122105518_create_game.up.sql  20240123030812_create_post.down.sql  20240123030812_create_post.up.sql  20240123040030_insert_admin.down.sql  20240123040030_insert_admin.up.sql  20240123042452_insert_games.down.sql  20240123042452_insert_games.up.sql  (+53 more)
server/src/: cache.rs  cli.rs  (+3 more)
(+321 files in other folders)
