[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["multipart"] }
chrono = { version = "0.4.30", features = ["serde"] }
clap = { version = "4.4.3", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
] }
thiserror = "1.0.56"
log = "0.4.20"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = [
  "compression-full",
  "timeout",
  "catch-panic",
  "request-id",
  "trace",
  "normalize-path",
  "sensitive-headers",
  "cors",
  "fs",
] }
octocrab = "0.32.0"
jsonwebtoken = "9.2.0"
uuid = { version = "1.7.0", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive"] }
serde_json = "1.0.113"
