[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
axum = { version = "0.7.4", features = ["multipart", "ws"] }
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
] }
thiserror = "1.0.57"
log = "0.4.20"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
  "compression-full",
  "timeout",
  "catch-panic",
  "request-id",
  "trace",
  "normalize-path",
  "sensitive-headers",
  "cors",
  "fs",
  "limit",
] }
octocrab = "0.34.1"
jsonwebtoken = "9.2.0"
uuid = { version = "1.7.0", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive"] }
serde_json = "1.0.114"
redis = { version = "0.24.0", features = ["tokio-comp"] }
futures = "0.3.30"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }
http-body-util = "0.1.0"

[features]
mock-time = []
