[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8_core = { path = "../chip8_core" }
js-sys = ">=0.3.46"
wasm-bindgen = ">=0.2.69"
[dependencies.web-sys]
version = ">=0.3.46"
features = [
    "CanvasRenderingContext2d",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "Window",
    "KeyboardEvent",
    "Document"
]

[lib]
crate-type = ["cdylib"]
